Implementando o Driver Sensores (simulador)

--- a/workspace/driver-sensores/pom.xml
+++ b/workspace/driver-sensores/pom.xml
@@ -10,4 +10,25 @@
 	<artifactId>driver-sensores</artifactId>
 	<name>Driver Sensores</name>
 	<description>Simulação de um driver de comunicação com os sensores de barragens.</description>
+
+	<dependencies>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.10</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-collections4</artifactId>
+			<version>4.4</version>
+		</dependency>
+
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.13</version>
+			<scope>test</scope>
+		</dependency>
+	</dependencies>
 </project>
