--- a/workspace/sica-monitoramento/pom.xml
+++ b/workspace/sica-monitoramento/pom.xml
@@ -34,6 +34,12 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>br.pucminas.tcc.sica</groupId>
+			<artifactId>driver-sensores</artifactId>
+			<version>1.0.0-SNAPSHOT</version>
+		</dependency>
+
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
