--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -40,6 +40,7 @@ build:
   before_script:
     - git --version
   script:
+    - chmod +x ./workspace/build.sh
     - ./workspace/build.sh
     # - docker build --tag $CONTAINER_IMAGE:latest --file Dockerfile-full .
   artifacts:
