Habilitando build do Gitlab CI

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -40,13 +40,13 @@ build:
   before_script:
     - git --version
   script:
-    - mvn clean install -f ./sica-parent/pom.xml
-    - mvn clean install -f ./driver-sensores/pom.xml
-    - mvn clean install -f ./sica-commons/pom.xml
-    - mvn clean package -f ./sica-ativos/pom.xml
-    - mvn clean package -f ./sica-monitoramento/pom.xml
-    - mvn clean package -f ./sica-seguranca/pom.xml
-    - mvn clean package -f ./sica-portal-web/pom.xml
+    - mvn clean install -f workspace/sica-parent/pom.xml
+    - mvn clean install -f workspace/driver-sensores/pom.xml
+    - mvn clean install -f workspace/sica-commons/pom.xml
+    - mvn clean package -f workspace/sica-ativos/pom.xml
+    - mvn clean package -f workspace/sica-monitoramento/pom.xml
+    - mvn clean package -f workspace/sica-seguranca/pom.xml
+    - mvn clean package -f workspace/sica-portal-web/pom.xml
     # - docker build --tag $CONTAINER_IMAGE:latest --file Dockerfile-full .
   artifacts:
     paths:
