--- a/workspace/sica-ativos/src/main/resources/application.properties
+++ b/workspace/sica-ativos/src/main/resources/application.properties
@@ -1,13 +1,13 @@
-## default connection pool
+# default connection pool
 spring.datasource.hikari.connectionTimeout=20000
 spring.datasource.hikari.maximumPoolSize=5
 spring.datasource.hikari.schema=ativos
 
-## PostgreSQL
+# PostgreSQL
 spring.datasource.url=jdbc:postgresql://localhost:5432/sica
 spring.datasource.username=sica_ativos
 spring.datasource.password=sica_ativos
 
-#drop n create table again, good for testing, comment this in production
+# drop n create table again, good for testing, comment this in production
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.default_schema=ativos
