[Ativos] Ajustes no Front-end
- Trocando o uso de require por imports

--- a/workspace/sica-ativos/pom.xml
+++ b/workspace/sica-ativos/pom.xml
@@ -38,6 +38,7 @@
 					</execution>
 					<execution>
 						<id>webpack build</id>
+						<phase>prepare-package</phase>
 						<goals>
 							<goal>webpack</goal>
 						</goals>
