--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,7 +15,7 @@
 # * Uses site:stage to collect the documentation for multi-module projects.
 # * Publishes the documentation for `master` branch.
 
-image: "registry.gitlab.com/systeck/docker-builder"
+image: maven:3.6-jdk-11-slim
 
 variables:
   # This will supress any download for dependencies and plugins or upload messages which would clutter the console log.
