--- a/workspace/sica-ativos/package.json
+++ b/workspace/sica-ativos/package.json
@@ -12,25 +12,36 @@
 		"crud"
 	],
 	"author": "Thiago L. C. Miranda",
-	"license": "MIT License",
+	"license": "MIT",
 	"bugs": {
 		"url": "https://gitlab.com/ThiagoColbert/poc-tcc-sica-2020/issues"
 	},
 	"homepage": "https://gitlab.com/ThiagoColbert/poc-tcc-sica-2020",
 	"dependencies": {
+		"fetch-defaults": "^1.0.0",
 		"react": "^16.5.2",
-		"react-dom": "^16.5.2",
-		"fetch-defaults": "^1.0.0"
+		"react-dom": "^16.5.2"
 	},
 	"scripts": {
 		"watch": "webpack --watch -d"
+	},
+	"eslintConfig": {
+		"extends": "react-app"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.1.0",
 		"@babel/preset-env": "^7.1.0",
 		"@babel/preset-react": "^7.0.0",
-		"babel-loader": "^8.0.2",
+		"babel-loader": "^8.1.0",
+		"css-loader": "^3.5.1",
+		"style-loader": "^1.1.3",
 		"webpack": "^4.19.1",
-		"webpack-cli": "^3.1.0"
+		"webpack-cli": "^3.1.0",
+		"webpack-dev-server": "^3.10.3"
+	},
+	"babel": {
+		"presets": [
+			"react-app"
+		]
 	}
 }
