[Ativos] Ajustes no Front-end
- Separando configuração do Webpack de dev e prd
- Adicionando plugin de Clean do Webpack

--- a/workspace/sica-ativos/pom.xml
+++ b/workspace/sica-ativos/pom.xml
@@ -42,6 +42,9 @@
 						<goals>
 							<goal>webpack</goal>
 						</goals>
+						<configuration>
+							<arguments>--config webpack.config.${ambiente}.js</arguments>
+						</configuration>
 					</execution>
 				</executions>
 			</plugin>
