--- a/workspace/sica-ativos/package.json
+++ b/workspace/sica-ativos/package.json
@@ -18,8 +18,10 @@
 	},
 	"homepage": "https://gitlab.com/ThiagoColbert/poc-tcc-sica-2020",
 	"dependencies": {
+		"bootstrap": "^4.4.1",
 		"fetch-defaults": "^1.0.0",
 		"react": "^16.5.2",
+		"react-bootstrap": "^1.0.0",
 		"react-dom": "^16.5.2"
 	},
 	"scripts": {
@@ -33,7 +35,9 @@
 		"@babel/preset-env": "^7.1.0",
 		"@babel/preset-react": "^7.0.0",
 		"babel-loader": "^8.1.0",
+		"clean-webpack-plugin": "^3.0.0",
 		"css-loader": "^3.5.1",
+		"html-webpack-plugin": "^4.2.0",
 		"style-loader": "^1.1.3",
 		"webpack": "^4.19.1",
 		"webpack-cli": "^3.1.0",
