--- a/workspace/sica-ativos/package.json
+++ b/workspace/sica-ativos/package.json
@@ -18,6 +18,7 @@
 	},
 	"homepage": "https://gitlab.com/ThiagoColbert/poc-tcc-sica-2020",
 	"dependencies": {
+		"@fortawesome/fontawesome-free": "^5.13.0",
 		"bootstrap": "^4.4.1",
 		"fetch-defaults": "^1.0.0",
 		"react": "^16.5.2",
@@ -37,6 +38,7 @@
 		"babel-loader": "^8.1.0",
 		"clean-webpack-plugin": "^3.0.0",
 		"css-loader": "^3.5.1",
+		"file-loader": "^6.0.0",
 		"html-webpack-plugin": "^4.2.0",
 		"style-loader": "^1.1.3",
 		"webpack": "^4.19.1",
