--- a/workspace/sica-ativos/pom.xml
+++ b/workspace/sica-ativos/pom.xml
@@ -38,7 +38,6 @@
 					</execution>
 					<execution>
 						<id>webpack build</id>
-						<phase>prepare-package</phase>
 						<goals>
 							<goal>webpack</goal>
 						</goals>
@@ -65,6 +64,12 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>br.pucminas.tcc.sica</groupId>
+			<artifactId>sica-commons</artifactId>
+			<version>1.0.0-SNAPSHOT</version>
+		</dependency>
+
+	<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
@@ -83,10 +88,6 @@
 			<groupId>commons-io</groupId>
 			<artifactId>commons-io</artifactId>
 			<version>1.3.2</version>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.commons</groupId>
-			<artifactId>commons-lang3</artifactId>
 		</dependency>
 
 		<dependency>
