--- a/workspace/sica-ativos/pom.xml
+++ b/workspace/sica-ativos/pom.xml
@@ -32,9 +32,15 @@
 							<goal>install-node-and-yarn</goal>
 						</goals>
 						<configuration>
-							<nodeVersion>v10.11.0</nodeVersion>
+							<nodeVersion>v10.13.0</nodeVersion>
 							<yarnVersion>v1.22.4</yarnVersion>
 						</configuration>
+					</execution>
+					<execution>
+						<id>yarn install</id>
+						<goals>
+							<goal>yarn</goal>
+						</goals>
 					</execution>
 					<execution>
 						<id>webpack build</id>
@@ -69,7 +75,7 @@
 			<version>1.0.0-SNAPSHOT</version>
 		</dependency>
 
-	<dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
