--- a/workspace/sica-monitoramento/pom.xml
+++ b/workspace/sica-monitoramento/pom.xml
@@ -32,9 +32,15 @@
 							<goal>install-node-and-yarn</goal>
 						</goals>
 						<configuration>
-							<nodeVersion>v10.11.0</nodeVersion>
+							<nodeVersion>v10.13.0</nodeVersion>
 							<yarnVersion>v1.22.4</yarnVersion>
 						</configuration>
+					</execution>
+					<execution>
+						<id>yarn install</id>
+						<goals>
+							<goal>yarn</goal>
+						</goals>
 					</execution>
 					<!-- <execution>
 						<id>webpack build</id>
