--- a/workspace/sica-ativos/pom.xml
+++ b/workspace/sica-ativos/pom.xml
@@ -70,12 +70,6 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>br.pucminas.tcc.sica</groupId>
-			<artifactId>sica-commons</artifactId>
-			<version>1.0.0-SNAPSHOT</version>
-		</dependency>
-
-		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
@@ -94,6 +88,10 @@
 			<groupId>commons-io</groupId>
 			<artifactId>commons-io</artifactId>
 			<version>1.3.2</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
 		</dependency>
 
 		<dependency>
