--- a/workspace/sica-ativos/.gitignore
+++ b/workspace/sica-ativos/.gitignore
@@ -3,6 +3,8 @@
 /.settings/
 .project
 .classpath
+src/main/generated/
+src/test/generated/
 src/main/resources/static/built/
 src/main/resources/templates/index.html
 /yarn-error.log
