--- a/workspace/sica-monitoramento/.gitignore
+++ b/workspace/sica-monitoramento/.gitignore
@@ -3,7 +3,10 @@
 /.settings/
 .project
 .classpath
+src/main/generated/
+src/test/generated/
 src/main/resources/static/built/
 src/main/resources/templates/index.html
 /yarn-error.log
 /.vscode/
+/.factorypath
