--- a/workspace/sica-monitoramento/pom.xml
+++ b/workspace/sica-monitoramento/pom.xml
@@ -13,10 +13,27 @@
 
 	<properties>
 		<spring.version>2.2.6.RELEASE</spring.version>
+
+		<m2e.apt.activation>jdt_apt</m2e.apt.activation>
 	</properties>
 
 	<build>
 		<plugins>
+			<plugin>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<annotationProcessorPaths>
+						<path>
+							<groupId>org.mapstruct</groupId>
+							<artifactId>mapstruct-processor</artifactId>
+							<version>1.3.1.Final</version>
+						</path>
+					</annotationProcessorPaths>
+					<generatedSourcesDirectory>src/main/generated</generatedSourcesDirectory>
+					<generatedTestSourcesDirectory>src/test/generated</generatedTestSourcesDirectory>
+				</configuration>
+			</plugin>
+
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
@@ -82,6 +99,18 @@
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.mapstruct</groupId>
+			<artifactId>mapstruct</artifactId>
+			<version>1.3.1.Final</version>
+		</dependency>
+		<dependency>
+			<groupId>org.mapstruct</groupId>
+			<artifactId>mapstruct-processor</artifactId>
+			<version>1.3.1.Final</version>
+			<scope>provided</scope>
 		</dependency>
 
 		<dependency>
