--- a/workspace/sica-monitoramento/src/main/resources/application.properties
+++ b/workspace/sica-monitoramento/src/main/resources/application.properties
@@ -11,3 +11,5 @@ spring.datasource.password=sica_monitoramento
 # drop n create table again, good for testing, comment this in production
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.default_schema=monitoramento
+# spring.jpa.show-sql=true
+# spring.jpa.properties.hibernate.format_sql=true
