--- a/workspace/sica-monitoramento/src/main/resources/application.properties
+++ b/workspace/sica-monitoramento/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-# default connection pool
+# JDBC Pool
 spring.datasource.hikari.connectionTimeout=20000
 spring.datasource.hikari.maximumPoolSize=5
 spring.datasource.hikari.schema=monitoramento
@@ -8,8 +8,17 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/sica
 spring.datasource.username=sica_monitoramento
 spring.datasource.password=sica_monitoramento
 
-# drop n create table again, good for testing, comment this in production
+# JPA/Hibernate
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.default_schema=monitoramento
 # spring.jpa.show-sql=true
 # spring.jpa.properties.hibernate.format_sql=true
+
+# RabbitMQ
+spring.rabbitmq.host=192.168.99.101
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+
+# MongoDB
+spring.data.mongodb.uri=mongodb://sicaMonitoramento:sica@localhost:27017/sica?authSource=admin&authMechanism=SCRAM-SHA-1
