--- a/workspace/sica-monitoramento/src/main/resources/application.properties
+++ b/workspace/sica-monitoramento/src/main/resources/application.properties
@@ -22,3 +22,14 @@ spring.rabbitmq.password=guest
 
 # MongoDB
 spring.data.mongodb.uri=mongodb://sicaMonitoramento:sica@localhost:27017/sica?authSource=admin&authMechanism=SCRAM-SHA-1
+
+# Defesa Civil
+sica.integracao.defesaCivil.estadual.baseUri=http://www.mocky.io/v2/5e991b473500007100c487e6
+sica.integracao.defesaCivil.municipal.baseUri=http://www.mocky.io/v2/5e991b473500007100c487e6
+
+# MQ
+sica.mq.exchange.barragem=barragemExchange
+
+# WebSocket
+sica.websocket.broker.appDestPrefix=/app
+sica.websocket.stomp.endpoint=/payroll
