--- a/workspace/sica-seguranca/src/main/resources/application.properties
+++ b/workspace/sica-seguranca/src/main/resources/application.properties
@@ -1,3 +1,19 @@
+# JDBC Pool
+spring.datasource.hikari.connectionTimeout=20000
+spring.datasource.hikari.maximumPoolSize=5
+spring.datasource.hikari.schema=seguranca
+
+# PostgreSQL
+spring.datasource.url=jdbc:postgresql://localhost:5432/sica
+spring.datasource.username=sica_seguranca
+spring.datasource.password=sica_seguranca
+
+# JPA/Hibernate
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.properties.hibernate.default_schema=seguranca
+# spring.jpa.show-sql=true
+# spring.jpa.properties.hibernate.format_sql=true
+
 # RabbitMQ
 spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
