--- a/workspace/sica-seguranca/src/main/resources/static/manifest.json
+++ b/workspace/sica-seguranca/src/main/resources/static/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "SICA - Monitoramento",
-  "name": "Sistema de Controle Ambiental - Módulo Monitoramento de Barragens",
+  "short_name": "SICA - Segurança e Comunicação",
+  "name": "Sistema de Controle Ambiental - Módulo Segurança e Comunicação",
   "icons": [
     {
       "src": "favicon.ico",
