--- a/workspace/sica-seguranca/src/main/resources/application.properties
+++ b/workspace/sica-seguranca/src/main/resources/application.properties
@@ -15,7 +15,15 @@ spring.jpa.properties.hibernate.default_schema=seguranca
 # spring.jpa.properties.hibernate.format_sql=true
 
 # RabbitMQ
-spring.rabbitmq.host=localhost
+spring.rabbitmq.host=192.168.99.101
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
+
+# MQ
+sica.mq.queue.barragem=barragemQueue
+sica.mq.exchange.barragem=barragemExchange
+
+# WebSocket
+sica.websocket.broker.appDestPrefix=/app
+sica.websocket.stomp.endpoint=/payroll
