--- a/workspace/sica-ativos/src/main/resources/application.properties
+++ b/workspace/sica-ativos/src/main/resources/application.properties
@@ -4,10 +4,13 @@ spring.datasource.hikari.maximumPoolSize=5
 spring.datasource.hikari.schema=ativos
 
 # PostgreSQL
+spring.datasource.driverClassName=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/sica
 spring.datasource.username=sica_ativos
 spring.datasource.password=sica_ativos
 
-# drop n create table again, good for testing, comment this in production
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.default_schema=ativos
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+# spring.jpa.show-sql=true
+# spring.jpa.properties.hibernate.format_sql=true
