--- a/docker/postgresql/Dockerfile
+++ b/docker/postgresql/Dockerfile
@@ -3,7 +3,8 @@ FROM postgres:9.4
 LABEL maintainer="th.colbert@gmail.com"
 LABEL version="1.0"
 
-ADD ./sql/*.sql /docker-entrypoint-initdb.d/
+ADD ./sql/*.sql			/docker-entrypoint-initdb.d/
+COPY ./postgresql.conf	/etc/postgresql/postgresql.conf
 
 RUN localedef -i pt_BR -c -f UTF-8 -A /usr/share/locale/locale.alias pt_BR.UTF-8
 
