--- a/workspace/sica-seguranca/src/main/resources/application.properties
+++ b/workspace/sica-seguranca/src/main/resources/application.properties
@@ -4,6 +4,7 @@ spring.datasource.hikari.maximumPoolSize=5
 spring.datasource.hikari.schema=seguranca
 
 # PostgreSQL
+spring.datasource.driverClassName=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/sica
 spring.datasource.username=sica_seguranca
 spring.datasource.password=sica_seguranca
@@ -13,6 +14,7 @@ spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.default_schema=seguranca
 # spring.jpa.show-sql=true
 # spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 # RabbitMQ
 spring.rabbitmq.host=192.168.99.101
