--- a/workspace/sica-portal-web/package.json
+++ b/workspace/sica-portal-web/package.json
@@ -23,7 +23,9 @@
 		"bootstrap": "^4.4.1",
 		"react": "^16.5.2",
 		"react-bootstrap": "^1.0.0",
-		"react-dom": "^16.5.2"
+		"react-dom": "^16.5.2",
+		"react-iframe": "^1.8.0",
+		"react-router-dom": "^5.1.2"
 	},
 	"scripts": {
 		"watch": "webpack --watch -d"
