--- a/workspace/sica-portal-web/package.json
+++ b/workspace/sica-portal-web/package.json
@@ -21,6 +21,7 @@
 	"dependencies": {
 		"@fortawesome/fontawesome-free": "^5.13.0",
 		"bootstrap": "^4.4.1",
+		"fetch-defaults": "^1.0.0",
 		"react": "^16.5.2",
 		"react-bootstrap": "^1.0.0",
 		"react-dom": "^16.5.2",
