--- a/workspace/sica-portal-web/package.json
+++ b/workspace/sica-portal-web/package.json
@@ -27,7 +27,8 @@
 		"react-bootstrap": "^1.0.0",
 		"react-dom": "^16.5.2",
 		"react-iframe": "^1.8.0",
-		"react-router-dom": "^5.1.2"
+		"react-router-dom": "^5.1.2",
+		"whatwg-fetch": "^3.0.0"
 	},
 	"scripts": {
 		"watch": "webpack --watch -d"
