--- a/workspace/sica-seguranca/package.json
+++ b/workspace/sica-seguranca/package.json
@@ -42,6 +42,7 @@
 		"css-loader": "^3.5.1",
 		"file-loader": "^6.0.0",
 		"html-webpack-plugin": "^4.2.0",
+		"lodash-webpack-plugin": "^0.11.5",
 		"style-loader": "^1.1.3",
 		"webpack": "^4.19.1",
 		"webpack-cli": "^3.1.0",
